[package]

name = "readwrite-comp"
version = "0.0.1"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]
description = "Compose ::std::io::Read and ::std::io::Write, plus extensions"
documentation = ""
homepage = "https://github.com/cheme/readwrite-ext/"
repository = "https://github.com/cheme/readwrite-ext/"
keywords =["Read","Write","compose","IO"]

[features]
nightly = []

[dev-dependencies]
rand = "0.3.11"

