[package]

name = "readwrite-comp"
version = "0.0.1"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]
description = "Compose ::std::io::Read and ::std::io::Write, plus extensions"
documentation = "http://cheme.github.io/readwrite-comp/"
homepage = "https://github.com/cheme/readwrite-ext/"
repository = "https://github.com/cheme/readwrite-ext/"
keywords =["Read","Write","compose","IO"]

[features]
default = ["with-clippy"]
nightly = []
with-clippy = ["clippy"]

[dev-dependencies]
rand = "0.3.11"

[dependencies]
clippy = {optional = true, git = "https://github.com/Manishearth/rust-clippy.git"}

