[package]

name = "readwrite-comp-test"
version = "0.0.1"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]
description = "Read write shared tests"
documentation = "http://cheme.github.io/readwrite-comp/"
homepage = "https://github.com/cheme/readwrite-ext/"
repository = "https://github.com/cheme/readwrite-ext/"
keywords =["Read","Write","compose","IO","limiter"]



[dependencies]
rand = "~0.3.17"

[dependencies.readwrite-comp]
path = "../readwrite-comp/"
